<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AppDetailsFragment"
    android:padding="@dimen/margin_standard"
    android:background="@color/airforceblue">
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/appIcon"
        android:layout_width="56dp"
        android:layout_height="56dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"
        tools:src="@mipmap/ic_launcher_round" />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/appName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textSize="@dimen/text_size_capital"
        app:layout_constraintStart_toEndOf="@+id/appIcon"
        app:layout_constraintTop_toTopOf="@+id/appIcon"
        app:layout_constraintBottom_toBottomOf="@+id/appIcon"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/margin_standard"
        android:ellipsize="end"
        tools:text="ScreenTimeControl"/>
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/isOnAppSwitch"
        android:text="@string/limit_this_app"
        android:layout_marginTop="@dimen/margin_standard"
        android:textColor="?android:textColor"
        android:textSize="@dimen/text_size_capital"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appIcon"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/margin_standard"
        app:layout_constraintBottom_toTopOf="@id/titleDivider"
        />
    <View
        android:id="@+id/titleDivider"
        android:alpha="0.5"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/margin_standard"
        app:layout_constraintTop_toBottomOf="@id/isOnAppSwitch"
        android:background="?colorPrimaryDark" />
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/dailyLimitSwitch"
        android:textColor="?android:textColor"
        android:layout_width="0dp"
        tools:isChecked="true"
        android:layout_marginHorizontal="@dimen/margin_standard"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_standard"
        app:layout_constraintTop_toBottomOf="@+id/titleDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/daily_time_limit"
        android:maxLines="1"
        android:ellipsize="end"
        android:textSize="@dimen/text_size_normal"/>
    <TimePicker
        android:id="@+id/dailyLimitPicker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/dailyLimitSwitch"
        android:timePickerMode="spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <View
        android:id="@+id/dailyTimeoutDivider"
        android:alpha="0.5"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@id/dailyLimitPicker"
        android:background="?colorPrimaryDark" />
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/timeoutSwitch"
        android:textColor="?android:textColor"
        android:layout_width="0dp"
        android:layout_marginHorizontal="@dimen/margin_standard"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/dailyTimeoutDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/time_out"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginVertical="@dimen/margin_standard"
        android:textSize="@dimen/text_size_normal"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/periodTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintTop_toBottomOf="@+id/timeoutSwitch"
        app:layout_constraintStart_toStartOf="@id/timeoutPeriodPicker"
        app:layout_constraintEnd_toEndOf="@id/timeoutPeriodPicker"
        android:gravity="center"
        android:text="@string/period"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/durationTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintTop_toBottomOf="@+id/timeoutSwitch"
        app:layout_constraintStart_toStartOf="@id/timeoutDurationPicker"
        app:layout_constraintEnd_toEndOf="@id/timeoutDurationPicker"
        android:gravity="center"
        android:text="@string/duration"
        />
    <TimePicker
        android:id="@+id/timeoutPeriodPicker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/timeoutSwitch"
        android:timePickerMode="spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/timeoutDurationPicker"
        />
    <TimePicker
        android:id="@+id/timeoutDurationPicker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/timeoutSwitch"
        android:timePickerMode="spinner"
        app:layout_constraintStart_toEndOf="@id/timeoutPeriodPicker"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>